# mindscape

./: .copier-answers.yml  .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  description.txt  experiments.yaml  fnirs_subset.yaml  manifest  noxfile.py  optuna_fnirs.yaml  paths.example.yaml  pyproject.toml  reference.yaml  results.json  tenptvkckktvvujdgj9gmc7ptbbsiid7
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml  pages.yml
baselines/: base.py  csp_lda.py  eeg_bandpower.py  fnirs_features.py  riemann.py
baselines/eeg/: bandpower.py  csp_lda.py  fbcsp.py  riemann.py  transfer.py
baselines/fnirs/: features.py  glm.py  windowed.py
baselines/fusion/: base.py  combine.py  gate.py  spatiotemporal.py
core/: config.py  decoder.py  export_onnx.py  features.py  reference.py
core/data/: DATASETS.md  registry.py  signal.py  splits.py  store.py
core/data/eeg/: base.py  bnci2014_001.py  braindecode_pre.py  registry.py  shin2017_nback_eeg.py  things_eeg1.py  things_eeg2.py
core/data/fnirs/: __init__.py  augment.py  base.py  clean.py  registry.py  shin2017.py  synthetic.py
core/features/: __init__.py  amplitude.py  bandpower.py  brain_camera.py  fnirs_bank.py
core/features/eeg/: __init__.py  bandpower.py  covariance.py  csd.py  montage.py  mvnn.py  source.py
core/features/fnirs/: __init__.py  amplitude.py  bank.py  chromophore.py  montage.py
core/features/fusion/: __init__.py  camera.py  coupling.py  joint_forward.py  series.py  source_prior.py
core/normalization/: __init__.py  mvnn.py  normalization.py  scale.py  zscore.py
devtools/: README.md  __init__.py  analytics.py  data_clumps.py  graph.py  jscpd.json  lcom.py  omit.py  sgconfig.yml  state_candidates.py
devtools/sg-rules/: py-top-level-function.yml  py-top-level-side-effect.yml
docs/: PLAN.md  ROADMAP.md  STRUCTURE.md
docs/architecture/: ARCHITECTURE.md  contrastive_trainer_seam.md  graph.json
docs/architecture/core/: ARCHITECTURE.md
docs/architecture/neuroscan/: ARCHITECTURE.md
interpretations/: README.md
interpretations/visual/: 2026-07-14_perception_continuous_metrics.md  2026-07-15_cbramod_input_scale.md  2026-07-15_lora_cbramod.md  2026-07-15_mvnn_preprocessing.md  2026-07-16_geometry_prior_trainable_encoder.md  2026-07-16_mvnn_per_subject_calibration.md  2026-07-16_u9sv_next_lever_forecast.md  2026-07-17_eeg_image_reconstruction.md  2026-07-18_retrieval_trainer_speed_and_negative_ablation.md
learning/: 01_motor-imagery-and-erd.md  02_signal-processing-and-csp.md  03_decoding-and-honest-eval.md  2026-07-13_frozen-foundation-head-engineering.md  README.md  field-map.md  glossary.md
learning/foundations/: M1_signals-and-frequency.md  M2_linear-algebra.md  M3_probability-stats.md  M4_neurophysiology.md  M5_hemodynamics-and-fnirs.md
neuroscan/: tracking.py  training.py
neuroscan/evaluation/: calibrate.py  cross_dataset.py  diagnostics.py  harness.py  invariants.py  metrics.py  modelcard.py  results.py  retrieval.py  sync_numbers.py
neuroscan/experiments/: align.py  fusion_gate.py  quantize.py  repro_benchnirs.py  reproduce_all.py  reproduce_atcnet.py  run.py  run_fnirs.py  run_fusion.py
neuroscan/models/: __init__.py  base.py  composite.py  decoders.py  eegnet.py  encoder_spec.py  encoders.py  foundation.py  lora.py  nice.py  profile.py  transforms.py
neuroscan/tasks/: cli.py  reproduce_all.py  run.py
neuroscan/tasks/motor_imagery/: README.md  align.py  quantize.py  reproduce_atcnet.py
neuroscan/tasks/visual/: README.md  clip_targets.py  cross_dataset_eval.py  frozen_head.py  loso_eval.py  paired_delta.py  reconstruct.py  retrieval_audit.py  sampling.py  seed_parity.py  train_nice.py
neuroscan/tasks/workload/: README.md  _eval.py  augment_probe.py  calibration_ablation.py  coupling_probe.py  fnirs_clean_ablation.py  fnirs_glm_eval.py  fnirs_recipes.py  fnirs_subset_select.py  fnirs_windowed_eval.py  fusion_camera_eval.py  fusion_gate.py  fusion_riemann_eval.py  optuna_fnirs.py  repro_benchnirs.py  riemann.py  run_fnirs.py  run_fusion.py  source_decode.py  source_prior_decode.py  validate_coupling.py  workload_confusion.py
neuroviz/: README.md  __init__.py  brain_camera_viz.py  export.py  export_brain_camera.py  export_eeg_workload.py  export_fnirs.py  export_fusion.py  manifest.py  viewdata.py
neuroviz/fusion/: __init__.py  export.py  inputs.py  viz.py
neuroviz/web/: app.js  index.html  style.css
research/: NOTICE_BOARD.md
research/deep_dives/: 2026-06-30_2a_sota_recipe.md  2026-06-30_motor-imagery-neuroscience.md  2026-06-30_tasks_datasets_landscape.md  2026-07-01_eeg_fnirs_fusion_sota.md  2026-07-01_fnirs_decoding_methods.md  2026-07-01_fnirs_decoding_sota.md  2026-07-01_fnirs_fundamentals.md  2026-07-01_fnirs_landscape.md  2026-07-05_fnirs_temporal_features_graded_workload.md  2026-07-06_fnirs_datasets_benchmarks.md  2026-07-07_eeg_visual_semantic_decoding_datasets.md  2026-07-07_neural_signal_synthesis.md  2026-07-08_things_eeg1_ds003825.md  2026-07-09_eeg_foundation_models_for_perception.md  2026-07-09_fnirs_simulator_2605.md  2026-07-14_eeg_fm_frozen_backbone_candidates.md  2026-07-15_eeg_foundation_discriminative_lr_lora.md  2026-07-15_joint_eeg_fnirs_forward_generator.md  2026-07-15_loky_windows_spawn_hang.md  2026-07-16_pytorch_2_13_cu130_audit.md  2026-07-17_clip_embedding_decoder_options.md
scripts/: repro_benchnirs_baseline.py
tests/: test_brain_camera.py
tests/integration/: test_decoder_export_chain.py  test_harness_smoke.py  test_pipeline_chain.py
tests/unit/: test_align.py  test_baselines_riemann.py  test_calibration_ablation.py  test_config.py  test_decoders.py  test_eeg_bandpower.py  test_fnirs.py  test_grouped_kfold.py  test_harness_folds.py  test_metrics.py  test_modelcard.py  test_models_registry.py  test_profile.py  test_results_sync.py  test_shin_eeg_nback.py  test_splits.py  test_tracking.py  test_transforms.py
tests/unit/baselines/: test_baselines_riemann.py  test_eeg_bandpower.py
tests/unit/core/: test_config.py  test_export_quant.py  test_fnirs_bank.py  test_reference.py
(+130 files in other folders)
