[project]
name = "mindscape"
version = "0.1.0"
description = "Honest, efficient non-invasive neural decoding (EEG/MEG) — decode, evaluate under shift, deploy on the edge."
readme = "README.md"
requires-python = ">=3.11"
# LOCAL MOD (not slotted, kept across copier update): the ML dep tree. The template skeleton ships only
# numpy+pydantic; mindscape's runtime deps live here as a permanent local divergence (bd 588n step 5).
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",          # CSP+LDA baseline, metrics (kappa), splits
    "polars",                # the data store + splits (core/data/{store,splits}.py)
    "pydantic>=2",           # validated preprocessing / hparam configs
    "omegaconf",             # paths.yaml loader (core/config.py)
    "mne>=1.6",              # EEG/MEG IO, filtering, epoching
    "moabb>=1.0",            # standardized BCI datasets + paradigms (the verified harness backbone)
    # torch >=2.7 for NVIDIA Blackwell (sm_120, RTX 5090). CPU build is fine for BCI IV-2a (tiny);
    # CUDA build comes from the PyTorch index below, not plain PyPI.
    "torch>=2.7",
    "braindecode>=0.8",      # PyTorch EEG decoders (EEGNet, ShallowFBCSPNet, Deep4Net)
    "pyriemann>=0.5",        # Riemannian baseline — covariance manifold, tangent space + MDM (baselines/riemann.py)
    "optuna>=4.9.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.1",
    "mlflow>=3.14.0",        # experiment tracking (neuroscan/tracking.py); MINDSCAPE_NO_MLFLOW = off-switch
    "open-clip-torch",       # CLIP image embeddings — the EEG->image retrieval target (Stage-3 NICE baseline)
    "pillow",                # image IO for the CLIP target computation (clip_targets.py)
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "fvcore"]   # fvcore: params + FLOPs profiling (neuroscan/models/profile.py)
export = ["onnx", "onnxruntime", "onnxscript"]   # ONNX export + parity check (Stage 2; core/export_onnx.py)
data = ["osfclient", "openneuro-py"]   # dataset fetch (Stage-3 EEG->image: OSF / OpenNeuro); not a runtime dep
devtools = ["grimp", "networkx", "nox"]   # import-graph diagnostic/fitness (bd 2r9/3nn) + gate runner (bd kvo; noxfile.py)
source = ["nibabel"]   # EEG->cortex source localization: MNE fsaverage forward/inverse (bd 728; core.features.eeg.source)
all = ["pytest", "onnx", "onnxruntime"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "neuroscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
# >>> LOCAL-SLOT: ruff-exclude — edit freely, the template will not overwrite intent here
extend-exclude = ["mlruns", "runs", "*.egg-info", "docs", "learning", "research", "interpretations", "neuroviz/web"]
# <<< LOCAL-SLOT: ruff-exclude

[tool.ruff.lint]
select = ["F", "B", "E501", "I", "T201", "FBT", "BLE001", "S110", "C901", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLC0415", "RUF100", "SIM"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["PLR2004", "FBT"]

[tool.vulture]
min_confidence = 60
# LOCAL MOD (not slotted): mindscape's framework-implicit names beyond the template's model_config —
# torch nn.Module.forward (via __call__), ORT SessionOptions.intra_op_num_threads, CBraMod.proj_out
# (Identity-set to expose backbone features). Used implicitly, not dead.
ignore_names = ["model_config", "forward", "intra_op_num_threads", "proj_out"]
ignore_decorators = ["@model_validator", "@field_validator", "@field_serializer", "@model_serializer", "@computed_field"]
# >>> LOCAL-SLOT: vulture-scan — edit freely, the template will not overwrite intent here
paths = ["core", "neuroscan", "baselines"]
exclude = ["neuroviz", "runs", "mlruns"]
# <<< LOCAL-SLOT: vulture-scan

[tool.coverage.run]
# >>> LOCAL-SLOT: coverage-scan — edit freely, the template will not overwrite intent here
source = ["core", "neuroscan", "baselines"]
omit = [
    # top-level CLI entrypoints (argparse + dispatch)
    "neuroscan/tasks/run.py", "neuroscan/tasks/reproduce_all.py",
    "neuroscan/tasks/motor_imagery/reproduce_atcnet.py",
    "neuroscan/tasks/motor_imagery/align.py",   # MI transfer RUNNER (its logic is baselines/eeg/transfer.py, 100% tested)
    # dependency glue: onnx quantize / CLIP download / mlflow tracking / ONNX export
    "neuroscan/tasks/motor_imagery/quantize.py", "neuroscan/tasks/visual/clip_targets.py",
    "neuroscan/tracking.py",
    "core/export_onnx.py",   # ONNX export (onnx dep; trained-decoder glue)
    # interface / registry maps (no logic)
    "core/decoder.py",   # typing.Protocol decoder contract (structural interface, no body)
    "core/data/registry.py",   # top-level dataset registry map (sibling core/data/*/registry.py already omitted)
    # GPU training entrypoints + torch models/trainers (device + data, not logic)
    "neuroscan/tasks/visual/train_nice.py", "neuroscan/tasks/visual/retrieval_audit.py",
    "neuroscan/tasks/visual/cross_dataset_eval.py",   # cross-dataset EEG1->EEG2 GPU runner
    "neuroscan/tasks/visual/loso_eval.py",   # leave-one-subject-out GPU runner (loops train_nice.train)
    "neuroscan/tasks/visual/frozen_head.py",   # frozen-backbone head sweep (external backbone + device, bd nm5)
    "neuroscan/models/decoders.py", "neuroscan/models/eegnet.py",
    "neuroscan/models/foundation.py",   # CBraMod wrapper: external backbone + device + out-of-repo weights (contract-test skip-guarded)
    "neuroscan/models/profile.py",   # fvcore params+FLOPs (model on device)
    "neuroscan/tasks/workload/feature_importance/optuna_search.py",   # Optuna study runner (entrypoint)
    "neuroscan/tasks/workload/feature_importance/differentiable.py",  # torch/GPU differentiable feature-selection runner
    "baselines/fusion/gate.py", "baselines/fusion/spatiotemporal.py", "core/data/eeg/braindecode_pre.py",
    # data adapters: filesystem read / OSF+OpenNeuro download
    "core/data/*/registry.py", "core/data/eeg/things_eeg2.py", "core/data/fnirs/shin2017.py",
    "core/data/eeg/things_eeg1.py",   # BrainVision disk read (its pure epochs_from_events is unit-tested)
    "core/features/fnirs/montage.py",   # fnirs_positions loads .mat (disk); pure _to_unit_disk tested in features/eeg/montage
    # workload/fusion runners: load -> fit -> record orchestration (their logic lives in combine/base/_eval,
    # and the per-subject z-score in core.features.zscore_per_subject)
    "neuroscan/tasks/workload/run_fnirs.py", "neuroscan/tasks/workload/run_fusion.py",
    "neuroscan/tasks/workload/fusion_gate.py", "neuroscan/tasks/workload/calibration_ablation.py",
    "neuroscan/tasks/workload/fusion_camera_eval.py",
    "neuroscan/tasks/workload/fusion_riemann_eval.py", "neuroscan/tasks/workload/fnirs_windowed_eval.py",
    "neuroscan/tasks/workload/fnirs_glm_eval.py", "neuroscan/tasks/workload/fnirs_clean_ablation.py",
    "neuroscan/tasks/workload/coupling_probe.py", "neuroscan/tasks/workload/workload_confusion.py",
    "neuroscan/tasks/workload/repro_benchnirs.py",
    "neuroscan/tasks/workload/feature_importance/recipes.py",   # fixed-recipe CV RUNNER (pure _cv logic tested; rest is store.load/disk record)
    # one-off decode/probe RUNNERS (load -> decode-arms -> log; the shared decode logic is in workload/riemann.py, tested)
    "neuroscan/tasks/workload/augment_probe.py", "neuroscan/tasks/workload/source_decode.py",
    "neuroscan/tasks/workload/source_prior_decode.py", "neuroscan/tasks/workload/validate_coupling.py",
    "neuroscan/tasks/cli.py",   # runner glue: logging.basicConfig + quiet-libs (side-effect setup, like tracking.py)
    "core/data/eeg/bnci2014_001.py",   # MOABB BNCI2014_001 adapter (download/disk, like the things_eeg*/shin2017 adapters)
]
# <<< LOCAL-SLOT: coverage-scan

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "@(abc\\.)?abstractmethod",
]


# Directional layer gate (import-linter): forbidden-import CONTRACTS graph.py can't express — a one-way
# `core -> trainer` import is no cycle, so it passes the graph gate but must fail here. The gate is
# universal (all house repos run it); the SCOPE + contracts are project-local, hence the slot.
# >>> LOCAL-SLOT: import-contracts — layering scope + your directional rules. `root_packages` is the set
# import-linter analyses (defaults to `packages`; widen it if a scope-only package such as a viewer carries
# layer rules but isn't in the arch set). mindscape widens to include neuroviz (the viewer): it reuses
# neuroscan's model registry (an intended downward edge), so it isn't in the arch gate set but DOES carry
# the "never import the viewer upward" rules. Three tiers, imports point DOWN only: core < neuroscan < neuroviz.
[tool.importlinter]
root_packages = ["core", "neuroscan", "neuroviz"]

[[tool.importlinter.contracts]]
name = "core is an independent kernel (imports neither neuroscan nor neuroviz)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["neuroscan", "neuroviz"]

[[tool.importlinter.contracts]]
name = "neuroscan (trainer) never imports neuroviz (viewer)"
type = "forbidden"
source_modules = ["neuroscan"]
forbidden_modules = ["neuroviz"]
# <<< LOCAL-SLOT: import-contracts


# Architecture fitness thresholds read by devtools/graph.py --assert.
[tool.structure]
# >>> LOCAL-SLOT: arch-thresholds — tune per repo; the template ships defaults and won't churn these,
# so a per-project override survives `copier update` without a merge conflict.
bottleneck_degree = 8    # fan-in AND fan-out both over this = god-module
file_max = 750           # god-file line ceiling — raise as real files grow
file_min = 0             # advisory line floor — 0 = OFF (no honest universal floor; raise per repo if wanted)
betweenness_max = 0.10   # advisory chokepoint threshold
test_layout = "mirror"   # every logic module needs a unit test: "mirror" = tests/unit/<pkg>/<path>/test_<name>.py
                         # (strict, one home); "flat" = test_<name>.py anywhere under tests/; "off" = no check
# <<< LOCAL-SLOT: arch-thresholds


# LOCAL MOD (not slotted): torch's CUDA build lives on the PyTorch index, not PyPI. Pin it there so uv
# resolves the cu130 wheel (RTX 5090) instead of the CPU build. `explicit` = only pinned packages use it.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
