[project]
name = "mindscape"
version = "0.1.0"
description = "Honest, efficient non-invasive neural decoding (EEG/MEG) — decode, evaluate under shift, deploy on the edge."
readme = "README.md"
requires-python = ">=3.11"
# LOCAL MOD (not slotted, kept across copier update): the ML dep tree. The template skeleton ships only
# numpy+pydantic; mindscape's runtime deps live here as a permanent local divergence (bd 588n step 5).
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",          # CSP+LDA baseline, metrics (kappa), splits
    "polars",                # the data store + splits (core/data/{store,splits}.py)
    "pydantic>=2",           # validated preprocessing / hparam configs
    "omegaconf",             # paths.yaml loader (core/config.py)
    "mne>=1.6",              # EEG/MEG IO, filtering, epoching
    "moabb>=1.0",            # standardized BCI datasets + paradigms (the verified harness backbone)
    # torch >=2.7 for NVIDIA Blackwell (sm_120, RTX 5090). CPU build is fine for BCI IV-2a (tiny);
    # CUDA build comes from the PyTorch index below, not plain PyPI.
    "torch>=2.7",
    "braindecode>=0.8",      # PyTorch EEG decoders (EEGNet, ShallowFBCSPNet, Deep4Net)
    "pyriemann>=0.5",        # Riemannian baseline — covariance manifold, tangent space + MDM (baselines/riemann.py)
    "optuna>=4.9.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.1",
    "mlflow>=3.14.0",        # experiment tracking (neuroscan/tracking.py); MINDSCAPE_NO_MLFLOW = off-switch
    "open-clip-torch",       # CLIP image embeddings — the EEG->image retrieval target (Stage-3 NICE baseline)
    "pillow",                # image IO for the CLIP target computation (clip_targets.py)
    "jaxtyping",   # Float[Tensor,"B C H W"] shape/dtype annotations — inert at runtime without a checker (no prod cost)
    "beartype",    # the runtime checker jaxtyping delegates to; wrap as @shapecheck in your types module (see devtools/README)
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "fvcore"]   # fvcore: params + FLOPs profiling (neuroscan/models/profile.py)
export = ["onnx", "onnxruntime", "onnxscript"]   # ONNX export + parity check (Stage 2; core/export_onnx.py)
data = ["osfclient", "openneuro-py"]   # dataset fetch (Stage-3 EEG->image: OSF / OpenNeuro); not a runtime dep
devtools = ["grimp", "networkx", "nox"]   # import-graph diagnostic/fitness (bd 2r9/3nn) + gate runner (bd kvo; noxfile.py)
source = ["nibabel"]   # EEG->cortex source localization: MNE fsaverage forward/inverse (bd 728; core.features.eeg.source)
all = ["pytest", "onnx", "onnxruntime"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "neuroscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
# >>> LOCAL-SLOT: ruff-exclude — edit freely, the template will not overwrite intent here
extend-exclude = ["mlruns", "runs", "*.egg-info", "docs", "learning", "research", "interpretations", "neuroviz/web"]
# <<< LOCAL-SLOT: ruff-exclude

[tool.ruff.lint]
select = ["F", "B", "E501", "I", "T201", "FBT", "BLE001", "S101", "S110", "C901", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLC0415", "RUF100", "N", "E741", "E742", "E743", "PLR0124", "PLR1714", "PLW3301", "RUF012", "RUF005", "RUF007", "RUF010", "RUF022", "RUF046", "C408", "C420", "SIM", "PERF401", "PLW0108", "E731", "E402", "ICN001", "S603", "S607", "PTH123", "SLF001"]
ignore = [
    # jaxtyping shape strings — `Float[Tensor, "b c h w"]` is a deliberate runtime-checked annotation;
    # F722 misreads the dim string as a malformed forward ref. jaxtyping's own FAQ prescribes disabling it.
    "F722",
]

# pep8-naming (N): case convention is a UNIVERSAL rule; the allowlisted idioms are per-repo FACTS. Every
# name that carries a meaning renames — only symbols with no honest descriptive form belong here (a dodge
# makes the gate useless).
[tool.ruff.lint.pep8-naming]
# >>> LOCAL-SLOT: pep8-naming — ignore-names VOCAB (this repo's ML/physics idioms); the block is shared,
# only its contents differ. Add domain symbols (MRI T1/T2/TR/PD, canonical lib aliases…) here.
# Single-uppercase = canonical linear-algebra matrices (A/B/C covariance, D diag, G gain, L lower-tri,
# M/P projection, R rotation, T transform/temperature, W weights); `F*`/`C*`/`P*`/`R*`/`W*` glob the
# feature-matrix + weight families (Ff/Fe/Ftr fnirs-eeg feature blocks, Cs/CF/CE covariances, Wq/W_f/W_e
# weight maps, P_all/Rz derived). Design matrix / weight idioms with no honest lowercase form.
ignore-names = ["X*", "Y*", "A", "B", "C*", "D", "F*", "G", "H", "L", "M", "P*", "R*", "T", "W*"]
# <<< LOCAL-SLOT: pep8-naming

[tool.ruff.lint.per-file-ignores]
# Tests get a wider carve-out: literal fixtures (PLR2004) + bool flags (FBT); privates-under-test are the
# point of a unit test (SLF001); mock classes mirror external PascalCase APIs + local math/alias scratch
# (N8xx); fixtures take many params (PLR0913). The SUBSTANTIVE gates (imports-at-top, real bugs, dead
# code) still apply to tests.
"__init__.py" = ["F401"]
"tests/**" = ["S101", "PLR2004", "FBT", "SLF001", "N801", "N802", "N803", "N806", "N812", "PLR0913"]
# >>> LOCAL-SLOT: per-file-ignores — repo-specific file carve-outs (e.g. a best-effort telemetry shell
# that must never raise). Add lines here; copier update won't overwrite this region.
# SLF001 (private-member-access) STRUCTURALLY conflicts with the mandated op-namespace pattern: the
# ast-grep py-top-level-function gate forces every helper onto a class as a static method, so a stateless
# sibling-helper call or a module-level function registry MUST reference `Cls._helper` — which SLF001
# flags, though it's not a cross-boundary reach-in (ruff can't express "same module"). Carved out where the
# pattern lives (runner tree + the static-op-namespace / feature-registry core files) until the scaffold
# reconciles its own two rules upstream (sdlc-scaffold-8ex; union-superset law resolves conflicts separately).
"neuroscan/tasks/**" = ["SLF001"]
"neuroscan/models/**" = ["SLF001"]
"neuroscan/evaluation/calibrate.py" = ["SLF001"]
"core/config.py" = ["SLF001"]
"core/features/fnirs/bank.py" = ["SLF001"]
"core/features/fnirs/montage.py" = ["SLF001"]
"core/data/fnirs/augment.py" = ["SLF001"]
# <<< LOCAL-SLOT: per-file-ignores

[tool.vulture]
min_confidence = 60
ignore_decorators = ["@model_validator", "@field_validator", "@field_serializer", "@model_serializer", "@computed_field"]
# ignore_names = symbols vulture must treat as USED — each IS referenced, but through a path its static
# name-match can't follow (framework dispatch, iteration, string keys, external-lib attribute). NOT a
# "don't care" list — a FACT VOCAB, per-repo, parallel to the pep8-naming slot (bd fy5). `model_config`
# is the universal pydantic base (metaclass-read); add this repo's documented FPs below.
# >>> LOCAL-SLOT: vulture-ignore-names — this repo's documented dead-code false positives.
# Framework-implicit: torch nn.Module.forward (via __call__), ORT SessionOptions.intra_op_num_threads,
# CBraMod.proj_out (Identity-set to expose backbone features). Referenced, not dead.
ignore_names = ["model_config", "forward", "intra_op_num_threads", "proj_out"]
# <<< LOCAL-SLOT: vulture-ignore-names
# >>> LOCAL-SLOT: vulture-scan — edit freely, the template will not overwrite intent here
paths = ["core", "neuroscan", "baselines"]
exclude = ["neuroviz", "runs", "mlruns"]
# <<< LOCAL-SLOT: vulture-scan

[tool.coverage.run]
# >>> LOCAL-SLOT: coverage-scan — edit freely, the template will not overwrite intent here
source = ["core", "neuroscan", "baselines"]
omit = [
    # top-level CLI entrypoints (argparse + dispatch)
    "neuroscan/tasks/run.py", "neuroscan/tasks/reproduce_all.py",
    "neuroscan/tasks/motor_imagery/reproduce_atcnet.py",
    "neuroscan/tasks/motor_imagery/align.py",   # MI transfer RUNNER (its logic is baselines/eeg/transfer.py, 100% tested)
    # dependency glue: onnx quantize / CLIP download / mlflow tracking / ONNX export
    "neuroscan/tasks/motor_imagery/quantize.py", "neuroscan/tasks/visual/clip_targets.py",
    "neuroscan/tracking.py",
    "core/export_onnx.py",   # ONNX export (onnx dep; trained-decoder glue)
    # interface / registry maps (no logic)
    "core/decoder.py",   # typing.Protocol decoder contract (structural interface, no body)
    "core/data/registry.py",   # top-level dataset registry map (sibling core/data/*/registry.py already omitted)
    # GPU training entrypoints + torch models/trainers (device + data, not logic)
    "neuroscan/tasks/visual/train_nice.py", "neuroscan/tasks/visual/retrieval_audit.py",
    "neuroscan/tasks/visual/cross_dataset_eval.py",   # cross-dataset EEG1->EEG2 GPU runner
    "neuroscan/tasks/visual/loso_eval.py",   # leave-one-subject-out GPU runner (loops train_nice.train)
    "neuroscan/tasks/visual/frozen_head.py",   # frozen-backbone head sweep (external backbone + device, bd nm5)
    "neuroscan/models/decoders.py", "neuroscan/models/eegnet.py",
    "neuroscan/models/foundation.py",   # CBraMod wrapper: external backbone + device + out-of-repo weights (contract-test skip-guarded)
    "neuroscan/models/profile.py",   # fvcore params+FLOPs (model on device)
    "neuroscan/tasks/workload/feature_importance/optuna_search.py",   # Optuna study runner (entrypoint)
    "neuroscan/tasks/workload/feature_importance/differentiable.py",  # torch/GPU differentiable feature-selection runner
    "baselines/fusion/gate.py", "baselines/fusion/spatiotemporal.py", "core/data/eeg/braindecode_pre.py",
    # data adapters: filesystem read / OSF+OpenNeuro download
    "core/data/*/registry.py", "core/data/eeg/things_eeg2.py", "core/data/fnirs/shin2017.py",
    "core/data/eeg/things_eeg1.py",   # BrainVision disk read (its pure epochs_from_events is unit-tested)
    "core/features/fnirs/montage.py",   # fnirs_positions loads .mat (disk); pure _to_unit_disk tested in features/eeg/montage
    # workload/fusion runners: load -> fit -> record orchestration (their logic lives in combine/base/_eval,
    # and the per-subject z-score in core.features.zscore_per_subject)
    "neuroscan/tasks/workload/run_fnirs.py", "neuroscan/tasks/workload/run_fusion.py",
    "neuroscan/tasks/workload/fusion_gate.py", "neuroscan/tasks/workload/calibration_ablation.py",
    "neuroscan/tasks/workload/fusion_camera_eval.py",
    "neuroscan/tasks/workload/fusion_riemann_eval.py", "neuroscan/tasks/workload/fnirs_windowed_eval.py",
    "neuroscan/tasks/workload/fnirs_glm_eval.py", "neuroscan/tasks/workload/fnirs_clean_ablation.py",
    "neuroscan/tasks/workload/coupling_probe.py", "neuroscan/tasks/workload/workload_confusion.py",
    "neuroscan/tasks/workload/repro_benchnirs.py",
    "neuroscan/tasks/workload/feature_importance/recipes.py",   # fixed-recipe CV RUNNER (pure _cv logic tested; rest is store.load/disk record)
    # one-off decode/probe RUNNERS (load -> decode-arms -> log; the shared decode logic is in workload/riemann.py, tested)
    "neuroscan/tasks/workload/augment_probe.py", "neuroscan/tasks/workload/source_decode.py",
    "neuroscan/tasks/workload/source_prior_decode.py", "neuroscan/tasks/workload/validate_coupling.py",
    "neuroscan/tasks/cli.py",   # runner glue: logging.basicConfig + quiet-libs (side-effect setup, like tracking.py)
    "core/data/eeg/bnci2014_001.py",   # MOABB BNCI2014_001 adapter (download/disk, like the things_eeg*/shin2017 adapters)
]
# <<< LOCAL-SLOT: coverage-scan

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "@(abc\\.)?abstractmethod",
]


# Directional layer gate (import-linter): forbidden-import CONTRACTS graph.py can't express — a one-way
# `core -> trainer` import is no cycle, so it passes the graph gate but must fail here. The gate is
# universal (all house repos run it); the SCOPE + contracts are project-local, hence the slot.
# >>> LOCAL-SLOT: import-contracts — layering scope + your directional rules. `root_packages` is the set
# import-linter analyses (defaults to `packages`; widen it if a scope-only package such as a viewer carries
# layer rules but isn't in the arch set). mindscape widens to include neuroviz (the viewer): it reuses
# neuroscan's model registry (an intended downward edge), so it isn't in the arch gate set but DOES carry
# the "never import the viewer upward" rules. Three tiers, imports point DOWN only: core < neuroscan < neuroviz.
[tool.importlinter]
root_packages = ["core", "neuroscan", "neuroviz"]

[[tool.importlinter.contracts]]
name = "core is an independent kernel (imports neither neuroscan nor neuroviz)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["neuroscan", "neuroviz"]

[[tool.importlinter.contracts]]
name = "neuroscan (trainer) never imports neuroviz (viewer)"
type = "forbidden"
source_modules = ["neuroscan"]
forbidden_modules = ["neuroviz"]
# <<< LOCAL-SLOT: import-contracts


# Architecture fitness thresholds read by devtools/graph.py --assert.
[tool.structure]
# >>> LOCAL-SLOT: arch-thresholds — tune per repo; the template ships defaults and won't churn these,
# so a per-project override survives `copier update` without a merge conflict.
bottleneck_degree = 8    # fan-in AND fan-out both over this = god-module
file_max = 750           # god-file line ceiling — raise as real files grow
file_min = 0             # advisory line floor — 0 = OFF (no honest universal floor; raise per repo if wanted)
betweenness_max = 0.10   # advisory chokepoint threshold
main_sequence_max = 0.0  # advisory Martin main-sequence distance |A+I-1| ceiling — 0 = OFF (a concrete
                         # stable leaf legitimately sits at D≈1, so no honest universal floor; raise per repo)
test_layout = "mirror"   # every logic module needs a unit test: "mirror" = tests/unit/<pkg>/<path>/test_<name>.py
                         # (strict, one home); "flat" = test_<name>.py anywhere under tests/; "off" = no check
# <<< LOCAL-SLOT: arch-thresholds

# magic-literals ENFORCED ratchet (devtools/magic_literals.py) — the recurring-string / repeated-key-set
# floor is frozen as a ceiling; a NEW magic literal pushes the count over and fails the merge (migrate it
# to a StrEnum/constant, or raise the ceiling in the same commit with a reason). The MECHANISM is a base
# gate (all repos run it enforced); the NUMBERS are a per-repo FACT (each repo's legitimate non-enum-able
# floor differs — column names, framework vocab, path segments). A fresh repo ships 0/0 and ratchets up.
[tool.magic_literals]
# >>> LOCAL-SLOT: magic-ceilings — this repo's frozen literal floor (raise only with a documented reason).
# The floor is DataFrame-schema + metric-key vocab — column names ({run,session,subject,dataset,epoch,
# label,label_id,file}) and metric keys ({acc,ece,kappa,fold,n}) recurring across the store/eval/results
# layer. The magic-literals design names exactly these ("column names, framework vocab") as the legitimate
# non-enum-able floor; frozen as the ratchet baseline (a NEW literal must migrate to a StrEnum or bump this
# with a reason). Ratchets down as the schema vocab consolidates.
max_strings = 33
max_key_sets = 10
# <<< LOCAL-SLOT: magic-ceilings

# Shape-contract gate (devtools/shape_contracts.py) — a public array/tensor boundary must carry a
# jaxtyping shape, not a bare `np.ndarray`/`Tensor`. The universal `ndarray`/`Tensor` are builtin; a
# repo's own array ALIASES (its core.types names that also mean "an array") are the FACT that varies.
[tool.shape_contracts]
# >>> LOCAL-SLOT: shape-aliases — this repo's array-alias type names (e.g. Volume, Mask, Image, Batch)
array_aliases = []
# <<< LOCAL-SLOT: shape-aliases


# LOCAL MOD (not slotted): torch's CUDA build lives on the PyTorch index, not PyPI. Pin it there so uv
# resolves the cu130 wheel (RTX 5090) instead of the CPU build. `explicit` = only pinned packages use it.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
